# mersenne_twister_na_informatyke

./: CMakeLists.txt  liczby_losowe.cpp  tests.cpp
catch/: CMakeLists.txt
src/mersenne_twister/: mersenne_twister.cpp  mersenne_twister.hpp
